# saga-cpp-legacy-adaptors

async_advert_adaptor/: Makefile  README  configure  configure.in
async_advert_adaptor/benchmark/: README  advert-benchmark.py  benchmark-launcher.py  grandmaster.py  master.py  perf_new.numbers  perf_old.numbers  performance.numbers  worker.py
async_advert_adaptor/config/: Makefile  make.cfg.in  saga_zmq.m4
async_advert_adaptor/server/: README.txt  advert_mongodb.js  advert_node.js  advert_peers.js  advert_server.js  advert_zmq_mongodb.js  murmur.js
async_advert_adaptor/sql_async_advert/: Convert.cpp  JsonBox.h  Makefile  Value.cpp  libsaga_adaptor_sql_async_advert.dylib  saga_adaptor_sql_async_advert.ini  sql_async_advert_adaptor.cpp  sql_async_advert_adaptor.hpp  sql_async_advert_advert.cpp  sql_async_advert_advert.hpp  sql_async_advert_advert_async.cpp  sql_async_advert_advert_directory.cpp  sql_async_advert_advert_directory.hpp  sql_async_advert_advert_directory_async.cpp  sql_async_server_connection.cpp  sql_async_server_connection.hpp  zhelpers.hpp
async_advert_adaptor/sql_async_advert/jsonbox/: .hg_archival.txt  .hgtags
async_advert_adaptor/whitepaper/: Makefile  saga-advert.tex
async_advert_adaptor/whitepaper/AsyncAdvert Slides/: AsyncAdvert.aux  AsyncAdvert.nav  AsyncAdvert.out  AsyncAdvert.tex  AsyncAdvert.toc
async_advert_adaptor/whitepaper/figures/: figures.graffle
aws/trunk/: INSTALL  Makefile  PACKAGE  README  README.ec2_image_prep  configure  configure.in
aws/trunk/aws_context/: INFO  Makefile  aws_context_adaptor.cpp  aws_context_adaptor.hpp  aws_context_adaptor.ini.in
aws/trunk/aws_job/: INFO  Makefile  aws_helper.cpp  aws_helper.hpp  aws_job_adaptor.cpp  aws_job_adaptor.hpp  aws_job_adaptor.ini.in  aws_job_service.cpp  aws_job_service.hpp
aws/trunk/aws_suite/: Makefile  aws_suite.cpp  aws_suite.hpp
aws/trunk/config/: config.hpp.in  make.cfg.in  saga.config.aws.c.mk.in  saga.config.java.c.mk.in  saga_aws.m4  saga_java.m4
aws/trunk/internal/: Makefile
curl/trunk/: Makefile  PACKAGE  configure  configure.in
curl/trunk/config/: config.hpp.in  make.cfg.in  saga.config.curl.c.mk.in  saga_curl.m4
curl/trunk/curl_context/: Makefile  curl_context_adaptor.cpp  curl_context_adaptor.hpp  curl_context_adaptor.ini
curl/trunk/curl_file/: Makefile  README  curl_file_adaptor.cpp  curl_file_adaptor.hpp  curl_file_adaptor.ini  curl_file_adaptor_dir.hpp  curl_file_adaptor_dir_impl.cpp  curl_file_adaptor_dir_nsdir_impl.cpp  curl_file_adaptor_dir_nsentry_impl.cpp  curl_file_adaptor_dir_perm_impl.cpp  curl_file_adaptor_file.hpp  curl_file_adaptor_file_impl.cpp  curl_file_adaptor_file_nsentry_impl.cpp  curl_file_adaptor_file_perm_impl.cpp
curl/trunk/file/: curl_file_adaptor.cpp  curl_file_adaptor.hpp  curl_file_adaptor.ini  curl_file_adaptor_connection.cpp  curl_file_adaptor_connection.hpp  curl_file_adaptor_context.cpp  curl_file_adaptor_context.hpp  curl_file_adaptor_dir.hpp  curl_file_adaptor_dir_impl.cpp  curl_file_adaptor_dir_nsdir_impl.cpp  curl_file_adaptor_dir_nsentry_impl.cpp  curl_file_adaptor_file.hpp  curl_file_adaptor_file_impl.cpp  curl_file_adaptor_file_nsentry_impl.cpp  curl_file_adaptor_file_perm_impl.cpp
curl/trunk/test/: Makefile  README  copy.test  curl_file_adaptor.ini
fastadvert/trunk/: Makefile  PACKAGE  configure  configure.in
fastadvert/trunk/SagaAdvertPerfTest/: SagaAdvertPerfTest.1  main.cpp
fastadvert/trunk/advert/: Makefile  README  advert.cpp  advert.hpp  advert_async.cpp  advert_database.hpp  advert_database_connection.cpp  advert_database_connection.hpp  advert_database_connection_cache.hpp  advertdb.sql  advertdirectory.cpp  advertdirectory.hpp  advertdirectory_async.cpp  common_helpers.hpp  config.hpp  connectstring.hpp  context.cpp  context.hpp  fast_advert_adaptor.cpp  fast_advert_adaptor.hpp  fast_advert_adaptor.ini.in
fastadvert/trunk/config/: Makefile  config.hpp.in  make.cfg.in  saga.config.openssl.c.mk.in  saga.config.postgresql.c.mk.in  saga.config.soci.c.mk.in  saga.config.sqlite3.c.mk.in  saga.config.xmlrpc.c.mk.in  saga_postgresql.m4  saga_soci.m4  saga_xmlrpc.m4
fastadvert/trunk/plots/: attribute_create_test.ps  attribute_read_test.ps
glite/branches/egi-release/: Makefile  PACKAGE  configure  configure.in
glite/trunk/: CHANGES  Makefile  PACKAGE  TODO  configure  configure.in
glite/trunk/config/: make.cfg.in  saga_glite_cream.m4  saga_ldap.m4
glite/trunk/cream_job/: Makefile  glite_cream_job.cpp  glite_cream_job.hpp  glite_cream_job_adaptor.cpp  glite_cream_job_adaptor.hpp  glite_cream_job_async.cpp  glite_cream_job_istream.hpp  glite_cream_job_ostream.hpp  glite_cream_job_proxy_wrapper.cpp  glite_cream_job_proxy_wrapper.hpp  glite_cream_job_service.cpp  glite_cream_job_service.hpp  glite_cream_job_service_async.cpp  glite_cream_job_stream.hpp  glite_cream_job_utils.cpp  glite_cream_job_utils.hpp
glite/trunk/glite-isn/: Makefile  glite_isn_adaptor.ini  isn_node.hpp
glite/trunk/glite-sd/: Makefile  bdii_provider.cpp  bdii_provider.hpp  glite_sd_adaptor.cpp  sd_parser.hpp
glite/trunk/glite_cream_job/: Makefile  glite_cream_job.cpp  glite_cream_job.hpp  glite_cream_job_adaptor.cpp  glite_cream_job_adaptor.ini  glite_cream_job_ostream.hpp  glite_cream_job_service.cpp  glite_cream_job_service.hpp  glite_cream_job_service_async.cpp  glite_cream_job_stream.hpp
globus/trunk/: CHANGES  INSTALL  Makefile  PACKAGE  README  configure  configure.in
globus/trunk/config/: make.cfg.in  saga_globus.m4
globus/trunk/file/: INFO  globus_gridftp_file_adaptor.cpp  globus_gridftp_file_adaptor_connection.cpp  globus_gridftp_file_adaptor_dir.hpp  globus_gridftp_file_adaptor_dir_impl.cpp  globus_gridftp_file_adaptor_dir_nsdir_impl.cpp  globus_gridftp_file_adaptor_dir_perm_impl.cpp  (+6 more)
gridsam/trunk/: INFO  INSTALL  Makefile  PACKAGE  README  configure  configure.in
hdfs/trunk/: CHANGES  INSTALL  Makefile  PACKAGE  configure  configure.in
sql/trunk/: CHANGES  INSTALL  Makefile  PACKAGE  configure  configure.in
ssh/trunk/: CHANGES  INSTALL  Makefile  PACKAGE  configure  configure.in
(+1448 files in other folders)
