# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
# 
# Distributed under the Boost Software License, Version 1.0. 
# (See accompanying Afile LICENSE_1_0.txt or copy at 
#  http://www.boost.org/LICENSE_1_0.txt)

# find saga.m4

m4_include([saga.m4])

m4_include([config/saga_aws.m4])

AC_INIT()

AX_SAGA_CONFIG()

if test "x$TMP_SAGA_INSTTYPE" == "source"; then
  AC_CONFIG_AUX_DIR([$TMP_SAGA_LOCATION/share/saga/config/])
else
  AC_CONFIG_AUX_DIR([$TMP_SAGA_LOCATION/config/])
fi


AX_SAGA_CHECK_AWS()
AC_CONFIG_FILES([config/saga.config.aws.c.mk])
AC_CONFIG_FILES([config/saga.config.java.c.mk])
AC_CONFIG_FILES([aws_context/aws_context_adaptor.ini])
AC_CONFIG_FILES([aws_job/aws_job_adaptor.ini])

# translate defines into integers
CPP_HAVE_AWS=0

if test "$HAVE_AWS" = "yes"; then
  CPP_HAVE_AWS=1
fi

AC_SUBST(CPP_HAVE_AWS)

BUILD_ADAPTOR_CONTEXT=no
BUILD_ADAPTOR_JOB=no

if test "x$HAVE_AWS" = "xyes"; then
  if test "x$SAGA_HAVE_ADAPTOR_CONTEXT" = "xyes"; then
    BUILD_ADAPTOR_CONTEXT="yes"
  fi
  if test "x$SAGA_HAVE_ADAPTOR_JOB" = "xyes"; then
    BUILD_ADAPTOR_JOB="yes"
  fi
fi

if ! test "x$HAVE_AWS_DETAIL" = "x"; then
  DETAIL="($HAVE_AWS_DETAIL)"
fi

AC_SUBST([BUILD_ADAPTOR_CONTEXT])
AC_SUBST([BUILD_ADAPTOR_JOB])


# create output files
AC_CONFIG_FILES([config/make.cfg])
AC_CONFIG_FILES([config/config.hpp])

AC_OUTPUT()

OUT=config.summary
rm -f $OUT
TEE="tee -a"

echo "                                                                 " | $TEE $OUT
echo " ========================================================        " | $TEE $OUT
echo " SAGA AWS ADAPTORS                                               " | $TEE $OUT
echo " --------------------------------------------------------        " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " Using SAGA from       : $TMP_SAGA_LOCATION ($TMP_SAGA_INSTTYPE) " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " AWS tools found       : $HAVE_AWS $DETAIL                       " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " AWS tool location     : $AWS_LOCATION                           " | $TEE $OUT
echo " AWS tool version      : $AWS_VERSION                            " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " JAVA location         : $JAVA_LOCATION                          " | $TEE $OUT
echo " JAVA version          : $JAVA_VERSION                           " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " Context Adaptor       : $BUILD_ADAPTOR_CONTEXT                  " | $TEE $OUT
echo " Job     Adaptor       : $BUILD_ADAPTOR_JOB                      " | $TEE $OUT
echo "                                                                 " | $TEE $OUT
echo " --------------------------------------------------------        " | $TEE $OUT
echo "                                                                 " | $TEE $OUT


if test "$SAGA_RECURSIVE_CONFIG" = "yes" ; then
  cat $OUT >> $SAGA_ROOT/$OUT
fi

