# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
# 
# Distributed under the Boost Software License, Version 1.0. 
# (See accompanying Afile LICENSE_1_0.txt or copy at 
#  http://www.boost.org/LICENSE_1_0.txt)

# find saga.m4

m4_include([saga.m4])

m4_include([config/saga_aws.m4])

AC_INIT()

AX_SAGA_CONFIG()

if test "x$TMP_SAGA_INSTTYPE" == "source"; then
  AC_CONFIG_AUX_DIR([$TMP_SAGA_LOCATION/config/])
else
  AC_CONFIG_AUX_DIR([$TMP_SAGA_LOCATION/share/saga/config/])
fi


AX_SAGA_CHECK_AWS()
AC_CONFIG_FILES([config/saga.config.aws.c.mk])
AC_CONFIG_FILES([config/saga.config.java.c.mk])
AC_CONFIG_FILES([aws_context/aws_context_adaptor.ini])
AC_CONFIG_FILES([aws_job/aws_job_adaptor.ini])

# translate defines into integers
CPP_HAVE_AWS=0

if test "$HAVE_AWS" = "yes"; then
  CPP_HAVE_AWS=1
fi

AC_SUBST(CPP_HAVE_AWS)

BUILD_ADAPTOR_CONTEXT=no
BUILD_ADAPTOR_JOB=no

if test "x$HAVE_AWS" = "xyes"; then
  BUILD_ADAPTOR_CONTEXT="yes"
  if test "x$SAGA_HAVE_PACKAGE_JOB" = "xyes"; then
    BUILD_ADAPTOR_JOB="yes"
  fi
fi

if ! test "x$HAVE_AWS_DETAIL" = "x"; then
  DETAIL="($HAVE_AWS_DETAIL)"
fi

AC_SUBST([BUILD_ADAPTOR_CONTEXT])
AC_SUBST([BUILD_ADAPTOR_JOB])


# create output files
AC_CONFIG_FILES([config/make.cfg])
AC_CONFIG_FILES([config/config.hpp])


SAGA_CONFIGURE_OK=yes
if test "$HAVE_SAGA" = "no"; then SAGA_CONFIGURE_OK=no; fi
if test "$HAVE_AWS"  = "no"; then SAGA_CONFIGURE_OK=no; fi
if test "$HAVE_JAVA" = "no"; then SAGA_CONFIGURE_OK=no; fi
AC_SUBST([SAGA_CONFIGURE_OK])


AC_OUTPUT()

OUT=config.summary
rm -f $OUT
touch $OUT

echo "                                                                 " >> $OUT
echo " ========================================================        " >> $OUT
echo " SAGA AWS ADAPTORS                                               " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT
echo " Using SAGA from       : $SAGA_LOCATION                          " >> $OUT
echo "       SAGA version    : $SAGA_VERSION                           " >> $OUT
echo "                                                                 " >> $OUT
echo " Adaptor Version       : $SAGA_PACKAGE_VERSION                   " >> $OUT
echo " Adaptor Revision      : $SAGA_PACKAGE_REVISION                  " >> $OUT
echo "                                                                 " >> $OUT
echo " AWS tools found       : $HAVE_AWS $DETAIL                       " >> $OUT
echo "                                                                 " >> $OUT
echo " AWS tool location     : $AWS_LOCATION                           " >> $OUT
echo " AWS tool version      : $AWS_VERSION                            " >> $OUT
echo "                                                                 " >> $OUT
echo " JAVA location         : $JAVA_LOCATION                          " >> $OUT
echo " JAVA version          : $JAVA_VERSION                           " >> $OUT
echo "                                                                 " >> $OUT
echo " Context Adaptor       : $BUILD_ADAPTOR_CONTEXT                  " >> $OUT
echo " Job     Adaptor       : $BUILD_ADAPTOR_JOB                      " >> $OUT
echo "                                                                 " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT

cat $OUT

