# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
# 
# Distributed under the Boost Software License, Version 1.0. 
# (See accompanying Afile LICENSE_1_0.txt or copy at 
#  http://www.boost.org/LICENSE_1_0.txt)

m4_include([saga.m4])
m4_include([config/saga_curl.m4])

AC_INIT()

AX_SAGA_CONFIG()

if test "x$TMP_SAGA_INSTTYPE" == "xinstall"; then
  AC_CONFIG_AUX_DIR([$TMP_SAGA_LOCATION/share/saga/config/])
else
  AC_CONFIG_AUX_DIR([$TMP_SAGA_LOCATION/config/])
fi


AX_SAGA_CHECK_CURL()

AC_CONFIG_FILES([config/saga.config.curl.c.mk])

# translate defines into integers
CPP_HAVE_CURL=0

if test "$HAVE_CURL" = "yes"; then
  CPP_HAVE_CURL=1
fi

AC_SUBST(CPP_HAVE_CURL)

BUILD_ADAPTOR_CONTEXT=no
BUILD_ADAPTOR_FILESYSTEM=no

if test "x$HAVE_CURL" = "xyes"; then

  BUILD_ADAPTOR_CONTEXT="yes"

  if test "$HAVE_CURL" = "yes"; then
    if test "x$SAGA_HAVE_PACKAGE_FILESYSTEM" = "xyes"; then
      BUILD_ADAPTOR_FILESYSTEM="yes"
    fi
  fi

fi

AC_SUBST([BUILD_ADAPTOR_CONTEXT])
AC_SUBST([BUILD_ADAPTOR_FILESYSTEM])


# create output files
AC_CONFIG_FILES([config/make.cfg])
AC_CONFIG_FILES([config/config.hpp])


SAGA_CONFIGURE_OK=yes
if test "$HAVE_SAGA" = "no"; then SAGA_CONFIGURE_OK=no; fi
if test "$HAVE_CURL" = "no"; then SAGA_CONFIGURE_OK=no; fi
AC_SUBST([SAGA_CONFIGURE_OK])


AC_OUTPUT()

OUT=config.summary
rm -f $OUT
touch $OUT

echo "                                                                 " >> $OUT
echo " ========================================================        " >> $OUT
echo " SAGA CURL ADAPTORS                                              " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT
echo " Using SAGA from       : $SAGA_LOCATION                          " >> $OUT
echo "       SAGA version    : $SAGA_VERSION                           " >> $OUT
echo "                                                                 " >> $OUT
echo " Adaptor Version       : $SAGA_PACKAGE_VERSION                   " >> $OUT
echo " Adaptor Revision      : $SAGA_PACKAGE_REVISION                  " >> $OUT
echo "                                                                 " >> $OUT
echo " CURL found            : $HAVE_CURL  ($CURL_LOCATION)            " >> $OUT
echo "                                                                 " >> $OUT
echo " Context Adaptor       : $BUILD_ADAPTOR_CONTEXT                  " >> $OUT
echo " File    Adaptor       : $BUILD_ADAPTOR_FILESYSTEM               " >> $OUT
echo "                                                                 " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT

cat $OUT

