# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
# 
# Distributed under the Boost Software License, Version 1.0. 
# (See accompanying file LICENSE_1_0.txt or copy at 
# http://www.boost.org/LICENSE_1_0.txt)

# find saga.m4

m4_include([saga.m4])

m4_include([config/saga_openssl.m4])
m4_include([config/saga_postgresql.m4])
m4_include([config/saga_soci.m4])
m4_include([config/saga_sqlite3.m4])
m4_include([config/saga_xmlrpc.m4])

AC_INIT()

AC_CONFIG_HEADERS([external/soci/postgresql/postgresql-config.hpp])

AX_SAGA_CONFIG()

#if test "x$TMP_SAGA_INSTTYPE" == "source"; then
#  AC_CONFIG_AUX_DIR([$TMP_SAGA_LOCATION/share/saga/config/])
#else
#  AC_CONFIG_AUX_DIR([$TMP_SAGA_LOCATION/config/])
#fi


AX_SAGA_CHECK_SQLITE3(3.3)
AC_CONFIG_FILES([config/saga.config.sqlite3.c.mk])

AX_SAGA_CHECK_POSTGRESQL(8.0)
AC_CONFIG_FILES([config/saga.config.postgresql.c.mk])

AX_SAGA_CHECK_SOCI(2.2)
AC_CONFIG_FILES([config/saga.config.soci.c.mk])

AX_SAGA_CHECK_XMLRPC([0.7.0])
AC_CONFIG_FILES([config/saga.config.xmlrpc.c.mk]) 

AX_SAGA_CHECK_OPENSSL(0.9.6)
AC_CONFIG_FILES([config/saga.config.openssl.c.mk])

# translate defines into integers
CPP_HAVE_SOCI=0
CPP_HAVE_INTERNAL_SOCI=0
CPP_HAVE_SOCI_MYSQL=0
CPP_HAVE_SOCI_SQLITE3=0
CPP_HAVE_SOCI_POSTGRESQL=0

if test "$HAVE_SOCI" = "yes"; then
  CPP_HAVE_SOCI=1
fi

if test "$HAVE_INTERNAL_SOCI" = "yes"; then
  CPP_HAVE_INTERNAL_SOCI=1
fi

if test "$HAVE_SOCI_MYSQL" = "yes"; then
  CPP_HAVE_SOCI_MYSQL=1  
fi                       
                         
if test "$HAVE_SOCI_SQLITE3" = "yes"; then
  CPP_HAVE_SOCI_SQLITE3=1
fi

if test "$HAVE_SOCI_POSTGRESQL" = "yes"; then
  CPP_HAVE_SOCI_POSTGRESQL=1
fi

AC_SUBST(CPP_HAVE_SOCI)
AC_SUBST(CPP_HAVE_INTERNAL_SOCI)
AC_SUBST(CPP_HAVE_SOCI_MYSQL)
AC_SUBST(CPP_HAVE_SOCI_SQLITE3)
AC_SUBST(CPP_HAVE_SOCI_POSTGRESQL)


BUILD_ADAPTOR_ADVERT=no

if test "x$SAGA_HAVE_ADAPTOR_ADVERT" = "xyes"; then
  BUILD_ADAPTOR_ADVERT="yes"
fi

AC_SUBST([BUILD_ADAPTOR_ADVERT])

if test "$BUILD_ADAPTOR_ADVERT" != "no"; then
  if test "$HAVE_SQLITE3-$HAVE_POSTGRESQL" == "yes-yes"; then
    DB_INFO="(w/ SQLite3 & PostgreSQL)"
    SAGA_DBTYPE="sqlite3"
  fi
  if test "$HAVE_SQLITE3-$HAVE_POSTGRESQL" == "yes-no"; then
    DB_INFO="(w/ SQLite3)"
    SAGA_DBTYPE="sqlite3"
  fi
  if test "$HAVE_SQLITE3-$HAVE_POSTGRESQL" == "no-yes"; then
    DB_INFO="(w/ PostgreSQL)"
    SAGA_DBTYPE="postgresql"
  fi
  if test "$HAVE_SQLITE3-$HAVE_POSTGRESQL" == "no-no"; then
    DB_INFO="(PostgreSQL and/or SQLite3 req'd.)"
    SAGA_DBTYPE="none"
    BUILD_ADAPTOR_ADVERT=no
    BUILD_ADAPTOR_REPLICA=no
  fi
fi

AC_SUBST(SAGA_DBTYPE)

if test "x$BUILD_ADAPTOR_ADVERT" == "xyes"; then
  DB_INFO_A=$DB_INFO
fi

if test "x$POSTGRESQL_VERSION" != "x"; then
  POSTGRESQL_VERSION_S="($POSTGRESQL_VERSION)"
fi



# create output files
AC_CONFIG_FILES([advert/fast_advert_adaptor.ini])
AC_CONFIG_FILES([config/make.cfg])
AC_CONFIG_FILES([config/config.hpp])

AC_OUTPUT()

OUT=config.summary

rm -f $OUT
touch $OUT

echo "                                                                 " >> $OUT
echo " ========================================================        " >> $OUT
echo " SAGA FAST ADVERT ADAPTOR                                        " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT
echo " Using SAGA from       : $TMP_SAGA_LOCATION ($TMP_SAGA_INSTTYPE) " >> $OUT
echo "                                                                 " >> $OUT
echo " PostgreSQL Found      : $HAVE_POSTGRESQL $POSTGRESQL_VERSION_S  " >> $OUT
echo " PostgreSQL Location   : $POSTGRESQL_LOCATION                    " >> $OUT
echo "                                                                 " >> $OUT
echo " SQLite3 (>3.3) Found  : $HAVE_SQLITE3                           " >> $OUT
echo " SQLite3 Location      : $SQLITE3_LOCATION                       " >> $OUT
echo "                                                                 " >> $OUT
echo " Fast Advert Adaptor  : $BUILD_ADAPTOR_ADVERT  $DB_INFO_A        " >> $OUT
echo "                                                                 " >> $OUT
echo " ========================================================        " >> $OUT
echo "                                                                 " >> $OUT


cat $OUT

