# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
# 
# Distributed under the Boost Software License, Version 1.0. 
# (See accompanying Afile LICENSE_1_0.txt or copy at 
#  http://www.boost.org/LICENSE_1_0.txt)

# find saga.m4

m4_include([saga.m4])

m4_include([config/saga_openssl.m4])

AC_INIT()

AX_SAGA_CONFIG()


AX_SAGA_CHECK_OPENSSL(0.9.6)

BUILD_ADAPTOR_JOB=no

if test "x$SAGA_HAVE_ADAPTOR_JOB" = "xyes"; then
  BUILD_ADAPTOR_JOB="yes"
fi

if test "$HAVE_OPENSSL" != "yes" ; then
    BUILD_ADAPTOR_JOB="no (OpenSSL req'd.)"
fi

AC_SUBST([BUILD_ADAPTOR_JOB])

AC_CONFIG_FILES([config/make.cfg])
AC_CONFIG_FILES([config/saga.config.openssl.c.mk])

AC_OUTPUT()

OUT=config.summary
rm -f $OUT
touch $OUT

echo "                                                                 " >> $OUT
echo " *******************************************************         " >> $OUT
echo " ***            THIS ADAPTOR IS DEPRECATED           ***         " >> $OUT
echo " ***       use the BES adaptor to access GridSAM     ***         " >> $OUT
echo " *** https://svn.cct.lsu.edu/repos/saga-adaptors/ogf ***         " >> $OUT
echo " *******************************************************         " >> $OUT
echo "                                                                 " >> $OUT
echo "                                                                 " >> $OUT
echo " ========================================================        " >> $OUT
echo " SAGA OMII ADAPTORS                                              " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT
echo " Using SAGA from       : $TMP_SAGA_LOCATION ($TMP_SAGA_INSTTYPE) " >> $OUT
echo "                                                                 " >> $OUT
echo " Adaptor Version       : $SAGA_PACKAGE_VERSION                   " >> $OUT
echo " Adaptor Revision      : $SAGA_PACKAGE_REVISION                  " >> $OUT
echo "                                                                 " >> $OUT
echo " OpenSSL Found         : $HAVE_OPENSSL                           " >> $OUT
echo " OpenSSL Location      : $OPENSSL_LOCATION                       " >> $OUT
echo "                                                                 " >> $OUT
echo " Job Adaptor (GridSAM) : $BUILD_ADAPTOR_JOB                      " >> $OUT
echo "                                                                 " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT

cat $OUT

